objects/copado__JobStep__c.object
<CustomObject>
    <description>A Job Step is a task that is performed as a result of a job template execution.</description>
    <fields>
        <fullName>copado__ApiName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>API name of the job that triggered the result. This information can be used for reporting purposes.</description>
        <inlineHelpText>API name of the job that triggered the result. This information can be used for reporting purposes.</inlineHelpText>
        <label>Api Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__ConfigJson__c</fullName>
        <description>Config Json stores Job step related configuration information, for example in case of manual step it contains manual task assignee and instructions.</description>
        <inlineHelpText>Config Json stores Job step related configuration information, for example in case of manual step it contains manual task assignee and instructions.</inlineHelpText>
        <label>ConfigJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__CustomType__c</fullName>
        <description>Type of the Job Step.</description>
        <inlineHelpText>Type of the Job Step.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Id__c</fullName>
        <description>Id of the destination environment.</description>
        <formula>CASESAFEID(copado__JobExecution__r.copado__Destination__c)</formula>
        <inlineHelpText>Id of the destination environment.</inlineHelpText>
        <label>Destination Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ExecutionSequence__c</fullName>
        <description>Used to define the order of execution in the context of User Story Deployment</description>
        <inlineHelpText>Used to define the order of execution in the context of User Story Deployment</inlineHelpText>
        <label>Execution Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>before</fullName>
                    <label>Before Deployment</label>
                </value>
                <value>
                    <fullName>after</fullName>
                    <label>After Deployment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_RepositoryId__c</fullName>
        <description>Store git repository Id linked to Job step</description>
        <label>Git RepositoryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <description>Id of the Git repository record linked to the pipeline.</description>
        <formula>copado__Git_RepositoryId__c</formula>
        <inlineHelpText>Id of the Git repository record linked to the pipeline to which the job step appliies.</inlineHelpText>
        <label>Git Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__JobExecution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A job execution is a representation of a job template execution at a given point in time.</description>
        <inlineHelpText>The job Execution associated with the step</inlineHelpText>
        <label>Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__JobTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the job template which initiates the execution of the job step.</description>
        <inlineHelpText>Name of the job template which initiates the execution of the job step.</inlineHelpText>
        <label>Job Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The order in which the job steps are executed.</description>
        <inlineHelpText>The order in which the job steps are executed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Owner_Id__c</fullName>
        <formula>OwnerId</formula>
        <label>Parent Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__PipelineId__c</fullName>
        <description>Stores pipeline Id linked to job execution</description>
        <inlineHelpText>Stores pipeline Id linked to job execution</inlineHelpText>
        <label>PipelineId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline_Id__c</fullName>
        <description>Id of the pipeline in which the job step has been executed.</description>
        <formula>copado__PipelineId__c</formula>
        <inlineHelpText>Id of the pipeline in which the job step has been executed.</inlineHelpText>
        <label>Pipeline Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Quality_Gate_Rule_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The scope, filter, and acceptance criteria defined for the quality gate rule referenced in the job step.</description>
        <inlineHelpText>The scope, filter, and acceptance criteria defined for the quality gate rule referenced in the job step.</inlineHelpText>
        <label>Quality Gate Rule Condition</label>
        <referenceTo>copado__Quality_Gate_Rule_Condition__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>Job_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Quality_Gate_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quality check performed by the job step.</description>
        <inlineHelpText>The quality check performed by the job step.</inlineHelpText>
        <label>Quality Gate Rule</label>
        <referenceTo>copado__Quality_Gate_Rule__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>Job_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Resource_Observations__c</fullName>
        <description>Register what resources are available after the step completes successfully. You can apply quality gates to these resources locally within the Function context.</description>
        <inlineHelpText>Register what resources are available after the step completes successfully. You can apply quality gates to these resources locally within the Function context.</inlineHelpText>
        <label>Resource Observations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local branch ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__ResultDataJson__c</fullName>
        <description>This field contain any additional step result information once the step has finished, for example for a flow step after the step completes the flow step can put some date which is result of step execution in this field and then use it in next step using {$Job.PrevStep.JSONResult.XXX} dynamic expression</description>
        <inlineHelpText>This field contains any additional step result information once the step has finished.</inlineHelpText>
        <label>Result Data Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Result_Viewer_Component__c</fullName>
        <inlineHelpText>This is the name of the lightning component that you want to render on the related result record. The name must be in the namespace:componentName format.</inlineHelpText>
        <label>Result Viewer Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The latest result associated with the job step.</description>
        <inlineHelpText>The latest result associated with the job step.</inlineHelpText>
        <label>Last Result</label>
        <referenceTo>copado__Result__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Id__c</fullName>
        <description>Id of the source environment.</description>
        <formula>CASESAFEID(copado__JobExecution__r.copado__Source__c)</formula>
        <inlineHelpText>Id of the source environment.</inlineHelpText>
        <label>Source Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>The status of the Job Step.</description>
        <formula>IF(NOT(ISBLANK(copado__JobTemplate__c)), &apos;NA&apos;, 
    if(ISBLANK(copado__Result__c), &apos;Pending&apos;, TEXT(copado__Result__r.copado__Status__c)))</formula>
        <inlineHelpText>The status of the Job Step.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Sub_Job_Execution__c</fullName>
        <description>Technical field. Not available in the page/layout.</description>
        <inlineHelpText>The Id of the related job execution that performs additional steps and operations, such as running a test.</inlineHelpText>
        <label>Sub Job Execution</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <description>Type of the Job Step.</description>
        <inlineHelpText>Type of the Job Step.</inlineHelpText>
        <label>Behaviour</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__UserStory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the user story to which this deployment task belongs</description>
        <inlineHelpText>Lookup field to the user story to which this deployment task belongs</inlineHelpText>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Deployment Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Step</label>
    <nameField>
        <label>Job Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Execution_Sequence_Required</fullName>
        <active>true</active>
        <description>Execution Sequence is required for Deployment steps</description>
        <errorConditionFormula>AND( copado__UserStory__c &lt;&gt; null, ISPICKVAL(copado__ExecutionSequence__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>copado__ExecutionSequence__c</errorDisplayField>
        <errorMessage>Execution Sequence is required for Deployment steps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Template_OR_Execution_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( copado__JobTemplate__c ), ISBLANK(  copado__JobExecution__c  ),  ISBLANK( copado__UserStory__c )  )</errorConditionFormula>
        <errorMessage>JobTemplate, Execution, or User Story is required</errorMessage>
    </validationRules>
</CustomObject>